--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>HelloTechAcademy</title>
+    <title>taken's Portfolio</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -26,7 +26,7 @@
   </body>
 
   <body>
-    <p class="title">Hello TechAcademy !</p>
+    <!-- <p class="title">Hello TechAcademy !</p> -->
     <div id="area1">
       <button type="button" id="btn1">今日は何日ですか？</button>
       <br>
@@ -35,5 +35,5 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="test.js"></script>
   </body>
-  
+
 </html>
