--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>taken's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"type="text/css">
   </head>
   <body>
     <h1>1. h1タグの中身は、見出し1だよ！1番大きい見出しだよ！</h1>
@@ -35,5 +35,30 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="test.js"></script>
   </body>
+  <!DOCTYPE html>
+  <html lang="en">
 
+  <body>
+    <div>
+      <div class="panel" id="panel1">︎</div>
+      <div class="panel" id="panel10">︎</div>
+    </div>
+    <div class="btn inactive" id="btn0">STOP</div>
+    </div>
+    <div id="spinButton">SPIN</div>
+  
+    <div id="result">
+    </div>
+    <div></br></br>
+        <div class="copy">By <a href="https://twitter.com/Fujiyama_Yuta">＠Fujiwara_Yuta</a>, Thanks to @Ishi </div>
+    </div>
+    <audio id="audio_drum" src="audio/drumroll.wav"></audio>
+    <audio id="audio_cymbal" src="audio/cymbal.wav"></audio>
+  
+    <script type="text/javascript" src="jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="js/Bingo.js"></script>
+  </body>
+  </html>
+  
 </html>
