--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>taken's Portfolio</title>
     <link rel="stylesheet" href="style.css"type="text/css">
   </head>
-  <body>
+  
+  <!--<body>
     <h1>1. h1タグの中身は、見出し1だよ！1番大きい見出しだよ！</h1>
     <h2>1-1. h2タグの中身は、見出し2だよ！</h2>
     <p>pタグの中には段落の塊を記述するよ！
@@ -23,7 +24,7 @@
       </ul>
     </div>
     <p>liタグはリストを書く時使う。liタグはulタグ（またはolタグ）で囲むことで使えるよ！</p>
-  </body>
+  </body>-->
 
   <body>
     <!-- <p class="title">Hello TechAcademy !</p> -->
