--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css"type="text/css">
   </head>
   
-  <!--<body>
+  <body>
     <h1>1. h1タグの中身は、見出し1だよ！1番大きい見出しだよ！</h1>
     <h2>1-1. h2タグの中身は、見出し2だよ！</h2>
     <p>pタグの中には段落の塊を記述するよ！
@@ -24,11 +24,11 @@
       </ul>
     </div>
     <p>liタグはリストを書く時使う。liタグはulタグ（またはolタグ）で囲むことで使えるよ！</p>
-  </body>-->
+  </body>
 
   <body>
     <!-- <p class="title">Hello TechAcademy !</p> -->
-    <div id="area1">
+<!--    <div id="area1">
       <button type="button" id="btn1">今日は何日ですか？</button>
       <br>
       <input type="text" id="tBox" class="font-main" />
@@ -37,8 +37,8 @@
     <script type="text/javascript" src="test.js"></script>
   </body>
   <!DOCTYPE html>
-  <html lang="en">
-
+  <html lang="en"> -->
+<!--
   <body>
     <div>
       <div class="panel" id="panel1">︎</div>
@@ -60,6 +60,6 @@
     <script type="text/javascript" src="jquery/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/Bingo.js"></script>
   </body>
-  </html>
+  </html> -->
   
 </html>
